# youtube-comment-sentiment

./: .env.example  .gitignore  .gitlab-ci.yml  .prometheus.yml  ARCHITECTURE.md  Dockerfile.mac  Dockerfile.prod  README.md  SYSTEM_DESIGN.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.dev.yml  pyproject.toml
app/: analyze.py  llm.py  main.py  models.py  redis.py  settings.py  youtube_api.py
app/routers/: comment_sentiment.py  videos.py
