[project]
name = "comment-sentiments"
version = "0.1.0"
description = ""
authors = [
    {name = "dibkb",email = "dibas9110@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "ruff (>=0.11.6,<0.12.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "google-api-python-client (>=2.167.0,<3.0.0)",
    "langchain-groq (>=0.3.2,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "python -m ruff format ."

